snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/error-0.3.0-20210927.134351-1-sources.jar.md5
afdcf2113807073fb03c92600fd7f19c